apps/cert-manager/templates/network-policy-allow-outbound-http.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-outbound-http
  # Required for HTTP calls of external APIs (e.g. Cloudflare)
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
  podSelector: {}
  policyTypes:
  - Egress
